fixed movie search box size on mobile

--- a/src/scss/bulma-override.scss
+++ b/src/scss/bulma-override.scss
@@ -2,7 +2,7 @@
 @import "../../node_modules/bulma/bulma.sass";
 
 body {
-  min-width: 350px;
+  min-width: 360px;
 }
 
 body,
